# billing_automation

./: .env.example  .gitignore  manage.py  postman_collection.json  pyproject.toml  requirements.txt  test_email_integration.py  test_pdf_ocr.py  vendor_bill_verify_curl_examples.md
apps/api/: urls.py
apps/common/: apps.py  drf_patches.py  models.py  pagination.py  permissions.py  spectacular_preprocessors.py  utils.py
apps/dashboard/: serializers.py  urls.py  views.py
apps/module/tally/: admin.py  apps.py  expense_views.py  expense_views_functional.py  forms.py  models.py  organization_data_views.py  serializers.py  urls.py  vendor_views.py  vendor_views.py.backup  vendor_views_functional.py  views.py
apps/module/zoho/: admin.py  apps.py  class_views.py  expense_views.py  journal_views.py  models.py  permissions.py  urls.py  vendor_views.py  views.py
apps/organizations/: admin.py  apps.py  class_views.py  models.py  modules.py  permissions.py  serializers.py  urls.py  views.py
apps/organizations/migrations/: 0001_initial.py  0002_alter_organizationmodule_options_and_more.py  0002_initial.py  (+4 more)
apps/subscriptions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py
docs/: API_KEY_AUTHENTICATION_GUIDE.md  BillMunshi.postman_collection.json  TALLY_TESTING_GUIDE.md
templates/: index.html
templates/registration/: password_reset_mail.html
(+65 files in other folders)
